# superjson-rs

./: Cargo.toml  LICENSE  README.md
src/: deserialize.rs  error.rs  lib.rs  path.rs  serialize.rs  value.rs
tests/: js_compat_test.rs  roundtrip_test.rs
