[package]
name = "superjson-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust port of superjson - safely serialize and deserialize data types beyond standard JSON"
license = "MIT"
repository = "https://github.com/tseki/superjson-rs"
keywords = ["json", "superjson", "serialization", "serde"]
categories = ["encoding", "parser-implementations"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
